--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,11 @@
+.select2-container--default .select2-selection--single {
+  border: 1px solid #e5e6e7;
+}
 body {
   background: #fff;
 }
 .border-bottom {
   border-bottom: 1px solid #e4e4e4 !important;
-}
-.border-bottom {
-  border-bottom: 1px solid #e4e4e4 !important;
-}
-.select2-container--default .select2-selection--single {
-  border: 1px solid #e5e6e7;
 }
 .container {
   min-width: 960px;
@@ -53,7 +50,7 @@ body {
   vertical-align: middle;
   white-space: nowrap;
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 .heading input {
   border-radius: 5px;
@@ -111,13 +108,16 @@ body {
   color: #ec7063;
 }
 .filters fieldset {
-  margin-bottom: 20px;
+  margin-bottom: 8px;
 }
 .filters fieldset legend {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .filters fieldset .radios .radio:nth-child(1) {
   margin-top: 0;
+}
+.filters fieldset .radios label {
+  font-size: 14px;
 }
 .filters fieldset .form-control+.form-control {
   margin-top: 15px;
@@ -305,7 +305,4 @@ body {
 .col-lg-7 .btn:hover {
   background-color: #1c84c6;
   color: #fff;
-}
-.col-lg-7 .decor {
-  color: #d9534f;
 }
