--- a/css/main.styl
+++ b/css/main.styl
@@ -1,15 +1,13 @@
+	// background-image: radial-gradient(farthest-side ellipse at 10% 0, rgba(102,105,104,0.9),rgba(93,112,119,0.89),rgba(160,174,150,0.9))
+	// background: rgba(51,51,51,0.4)
+		
+// fixs
+.select2-container--default .select2-selection--single
+	border: 1px solid #E5E6E7
 body
 	background: white
 .border-bottom
 	border-bottom: 1px solid #E4E4E4 !important
-	// background-image: radial-gradient(farthest-side ellipse at 10% 0, rgba(102,105,104,0.9),rgba(93,112,119,0.89),rgba(160,174,150,0.9))
-	// background: rgba(51,51,51,0.4)
-.border-bottom
-	border-bottom: 1px solid #E4E4E4 !important
-
-// fixs
-.select2-container--default .select2-selection--single
-	border: 1px solid #E5E6E7
 
 .container
 	min-width: 960px
@@ -18,8 +16,6 @@ body
 
 .breadcrumbs
 	margin-bottom: 10px !important
-
-
 
 .heading
 	display: flex
@@ -38,7 +34,7 @@ body
 		vertical-align: middle
 		white-space: nowrap
 		position: relative
-		margin-bottom: 20px
+		margin-bottom: 0px
 	input
 		border-radius: 5px
 		background: rgba(95, 94, 90, 0.1)
@@ -83,12 +79,14 @@ body
 				color: #ec7063
 .filters
 	fieldset
-		margin-bottom: 20px
+		margin-bottom: 8px
 		legend
-			margin-bottom: 10px
+			margin-bottom: 20px
 		.radios
 			.radio:nth-child(1)
 				margin-top: 0
+			label
+				font-size 14px
 		.form-control+.form-control
 			margin-top: 15px
 		.icon-org
@@ -224,5 +222,3 @@ body
 		&:hover
 			background-color: #1C84C6
 			color: white
-	.decor
-		color: #D9534F
