--- a/css/main.styl
+++ b/css/main.styl
@@ -21,9 +21,8 @@ body
 	display: flex
 	justify-content: space-between
 	align-items: center
-	margin: 12px 17px 17px
+	margin: 12px 0px 17px
 	.title
-		flex: 1 0 auto
 		margin: 20px 15px
 		font-size: 14px
 		font-weight: bold
@@ -122,7 +121,7 @@ body
 	height: 34px
 
 // request_details
-.request-details
+.form
 	.destinations
 		.row
 			background-color: #F8F8F8
@@ -190,7 +189,6 @@ body
 					background-color: white
 					margin: 0
 				.btn
-					border-radius: 0
 					background-color: white
 					font-size: 13px
 					border: 1px solid #CCCCCC
@@ -200,11 +198,8 @@ body
 					&:hover
 						background-color: #1C84C6
 						color: white
-				.table,.table-striped,.table-hover,.table-bordered
+				.table,.table-hover,.table-bordered
 					border: 1px solid #E4E4E4
-					tbody
-						tr.even
-							background-color: white !important
 				&:last-child
 					padding-bottom: 7px
 	.file-upload
@@ -222,3 +217,6 @@ body
 		&:hover
 			background-color: #1C84C6
 			color: white
+.row
+	.col-xs-4
+		padding-right: 0px
