--- a/css/main.styl
+++ b/css/main.styl
@@ -29,7 +29,7 @@ body
 		color: #333333
 	.form
 		flex: 0 0 33%
-		padding-left: 13px
+		padding-left: 7px
 		vertical-align: middle
 		white-space: nowrap
 		position: relative
@@ -50,7 +50,7 @@ body
 .bg-grey
 	background-color: #f3f3f4
 	.name
-		color: #23c6c8
+		color: #1abc9c
 		font-size: 15px
 		&:hover
 			color: #ec7063
@@ -91,12 +91,12 @@ body
 		.icon-org
 			position: absolute
 			bottom: 22%
-			right: 25px
+			right: 11px
 			color: rgb(28, 132, 198)
 		.icon-obj
 			position: absolute
 			bottom: 8%
-			right: 25px
+			right: 11px
 			color: rgb(28, 132, 198)
 	input
 		border-radius: 5px
