--- a/css/style.css
+++ b/css/style.css
@@ -1024,7 +1024,7 @@ button.dim:active:before {
 }
 .label-info,
 .badge-info {
-  background-color: #23c6c8;
+  background-color: #1abc9c;
   color: #FFFFFF;
 }
 .label-inverse,
