--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,10 @@ body {
 }
 .filters fieldset .radios label {
   font-size: 14px;
+  padding: 0;
+}
+.filters fieldset .radios label .check-padding {
+  padding-left: 5px;
 }
 .filters fieldset .form-control+.form-control {
   margin-top: 15px;
@@ -206,6 +210,9 @@ body {
 }
 .form .request .row .col-xs-12 {
   padding: 0 13px 15px 15px;
+}
+.form .requested-data {
+  margin-bottom: 20px;
 }
 .form .initial-data,
 .form .requested-data {
