--- a/css/main.styl
+++ b/css/main.styl
@@ -86,6 +86,9 @@ body
 				margin-top: 0
 			label
 				font-size 14px
+				padding: 0
+				.check-padding
+					padding-left: 5px
 		.form-control+.form-control
 			margin-top: 15px
 		.icon-org
@@ -161,6 +164,8 @@ body
 					border-radius: 0 !important
 			.col-xs-12
 				padding: 0 13px 15px 15px
+	.requested-data
+		margin-bottom: 20px
 	.initial-data,.requested-data
 		padding: 0
 		.title
